# ixray-1.6-stcop

./: .gitignore  CMakeLists.txt  fs.ltx  particle_imgui.ini
.github/workflows/: build-editors.yml  build-plugins.yml
cmake/: msvc.cmake
cmake/linux/: Packages.config  nuget.cmake
cmake/windows/: Packages.config  nuget.cmake
doc/: commit-style.md  commit-style.rus.md
gamedata/configs/: engine_external.ltx
gamedata/scripts/: gulag_general.script  state_lib.script  state_mgr_animation_list.script  ui_main_menu.script  ui_main_menu.script.bak  ui_mm_opt_video.script  xr_animpoint_predicates.script
src/3rd party/: CMakeLists.txt
src/3rd party/NvMender2003/: CMakeLists.txt  NVMeshMender.cpp  mender_input_output.h  remove_isolated_verts.h
src/utils/: CMakeLists.txt
src/xrCDB/: CMakeLists.txt  ISpatial.cpp  ISpatial.h
src/xrCore/: CMakeLists.txt  FS.cpp  FS.h  FS_impl.h  FixedVector.h  LocatorAPI.cpp  LzHuf.cpp  ShapeData.cpp  ShapeData.h  Xr_ini.cpp  _flags.h  _math.cpp  _matrix.h  _noncopyable.h  _quaternion.h  _sphere.h  _stl_extensions.h  _vector2.h  _vector3d.h  doug_lea_allocator.cpp  doug_lea_allocator.h  fastdelegate.h  intrusive_ptr.h  log.cpp  lzhuf.h  memory_alloc_mimalloc.cpp  profiler.h  shared_string.cpp  shared_string.h  xrCore.cpp  xrCore.h  xrDebug.cpp  xrMemory.cpp  xrMemory_pso_Fill32.cpp  xrMemory_subst_msvc.h  xrSyncronize.cpp  xrSyncronize.h  xr_delegate.h  xr_path.cpp  xr_resource.h  (+2 more)
src/xrEngine/: Application.cpp  Application.h  CMakeLists.txt  CameraBase.cpp  CameraBase.h  (+84 more)
util/: change_file_encodings.py  includes_case_fix.py
(+2523 files in other folders)
